...
              />
              {errors.email && (
                <Text className="font-medium text-destructive text-sm">{errors.email.message}</Text>
              )}
            </View>
            <Button
              testID="forgot-password-submit"
              className="w-full"
              onPress={handleSubmit(onSubmit)}
              disabled={isSubmitting}>
              <Text>{isSubmitting ? 'Sending...' : 'Reset your password'}</Text>
            </Button>
          </View>
...
